# Dragonscribe

./: .gitignore  LICENSE  NOTICE  README.md  SECURITY.md  dragonscribe.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/ISSUE_TEMPLATE/: damaged-save.md
.github/workflows/: ci.yml  codeql.yml  release.yml
dragonscribe/: __init__.py  api.py  app.py  locate.py  saveformat.py  skills.py
dragonscribe/ui/: index.html
packaging/: Unblock-Dragonscribe.bat
tests/: test_locate.py  test_saveformat.py  test_skills.py
